--- a/src/css/base.css
+++ b/src/css/base.css
@@ -14,6 +14,14 @@ body {
     align-items: center;
 }
 
+header a {
+    width: 10em;
+}
+
+img {
+    width: 10em;
+}
+
 a {
     text-decoration: none;
 }
