--- a/src/css/great.css
+++ b/src/css/great.css
@@ -4,7 +4,7 @@ display-great {
 
 header, nav, #wrapper{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,13 +30,13 @@ header, nav, #wrapper{
 #barra-navegacion {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
 }
 
 main {
-    width: 50%;
+    width: 50vw;
     text-align: justify;
 }
 main h2 {
@@ -44,12 +44,12 @@ main h2 {
 }
 
 aside {
-    width: 20%;
+    width: 20vw;
 }
 
 footer {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     align-items: center;
