--- a/src/css/small.css
+++ b/src/css/small.css
@@ -4,7 +4,7 @@ display-small {
 
 header, nav, #wrapper, footer{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,7 +18,7 @@ header, nav, #wrapper, footer{
 #barra-navegacion {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     flex-direction: column;
     align-items: center;
 }
@@ -31,7 +31,7 @@ header, nav, #wrapper, footer{
 }
 
 main {
-    width: 100%;
+    width: 100vw;
     text-align: justify;
 }
 main h2 {
